fixed .step css styling for flex wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,7 @@ section {
     width: 80%;
     border-bottom: 1px solid #39a6b2;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
